--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BuildWeb.loader.js";
+      var loaderUrl = buildUrl + "/AsiaLadder.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildWeb.data",
-        frameworkUrl: buildUrl + "/BuildWeb.framework.js",
-        codeUrl: buildUrl + "/BuildWeb.wasm",
+        dataUrl: buildUrl + "/AsiaLadder.data",
+        frameworkUrl: buildUrl + "/AsiaLadder.framework.js",
+        codeUrl: buildUrl + "/AsiaLadder.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Ladder",
